--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -153,7 +153,7 @@
 
     <div class="footer-div">
 
-      <div class="footer-div-logo"><img src="/img/logo-clothing.png" alt="Logo Clothing"></div>
+      <div class="footer-div-logo"><img src="../img/logo-clothing.png" alt="Logo Clothing"></div>
 
       <p class="footer-div-parrafo">Copyright © 2021-2023 Clothing.</p>
 
