--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Explora nuestra colección de ropa única y confeccionada a mano. Encuentra piezas exclusivas que reflejan tu estilo auténtico y apreciación por la artesanía y la ropa hecha a mano.">
+  <meta name="title" content="Ropa Hecha a Mano - Estilo Único y Artesanía en Cada Prenda">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;800;900&display=swap" rel="stylesheet">
@@ -11,7 +14,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="./css/styles.css">
-  <title>Inicio</title>
+  <title>Clothing - Estilo único y creativo | Ropa hecha a mano</title>
 </head>
 
 <body>
@@ -86,7 +89,7 @@
           alianza con organizaciones que trabajan por una moda con triple impacto.</p>
       </div>
       <div class="index-section-1-img">
-        <img src="./img/womantitle1.jpg" alt="imagen">
+        <img src="./img/womantitle1.jpg" alt="mujer con ropa hecha a mano en la naturaleza">
         <p>desafía tu imaginación, accede a un mundo de lujo, exótico y lejano</p>
       </div>
     </section>
