--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Explora nuestra colección de ropa hecha a mano con diseños únicos y artesanía excepcional. Encuentra prendas que reflejan tu estilo auténtico.">
+  <meta name="title" content="Explora Nuestro Catálogo: Ropa Hecha a Mano Exclusiva">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;800;900&display=swap" rel="stylesheet">
@@ -11,7 +14,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link rel="stylesheet" href="../css/styles.css">
-  <title>Catálogo</title>
+  <title>Catálogo de ropa hecha a mano | Descubre nuestras creaciones</title>
 </head>
 
 <body>
@@ -137,11 +140,11 @@
 
       <h3>Comprá por género</h3>
       <div>
-        <a href=""><img src="../img/man1.jpg" alt="Hombre">
+        <a href=""><img src="../img/man1.jpg" alt="Cátalogo Hombre">
           <span class="cards-span">Hombre</span></a>
-        <a href=""><img src="../img/woman2.jpg" alt="Mujer">
+        <a href=""><img src="../img/woman2.jpg" alt="Cátalogo Mujer">
           <span class="cards-span">Mujer</span></a>
-        <a href=""><img src="../img/girl.jpg" alt="Niños">
+        <a href=""><img src="../img/girl.jpg" alt="Cátalogo Niños">
           <span class="cards-span">Niños</span></a>
       </div>
     </section>
