--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Conoce nuestra historia y nuestra pasión por la moda artesanal. Descubre quiénes somos y cómo creamos ropa hecha a mano con amor y creatividad.">
+  <meta name="title" content="Conoce Nuestra Historia: Compromiso con la Moda Artesanal">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400;800;900&display=swap" rel="stylesheet">
@@ -11,7 +14,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link rel="stylesheet" href="../css/styles.css">
-  <title>Nosotros</title>
+  <title>Sobre Nosotros | Nuestra Historia en la Moda Artesanal</title>
 </head>
 
 <body>
